add node clear macro

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 # light-rbtree 
-light-rbtree is a library for easier to use rbtree, 
+A red-black tree library that can help you quickly build projects.
